include/raygui.h

#define RAYGUI_VERSION_MAJOR 4
#define RAYGUI_VERSION_MINOR 5
#define RAYGUI_VERSION_PATCH 0
#define RAYGUI_VERSION  "5.0-dev"
    #define GUI_BUTTON_DOWN         (IsMouseButtonDown(MOUSE_LEFT_BUTTON) || IsGamepadButtonDown(0, GAMEPAD_BUTTON_RIGHT_FACE_DOWN))
    #define GUI_BUTTON_DOWN_ALT     (IsMouseButtonDown(MOUSE_RIGHT_BUTTON) || IsGamepadButtonDown(0, GAMEPAD_BUTTON_RIGHT_FACE_RIGHT))
    #define GUI_BUTTON_PRESSED      (IsMouseButtonPressed(MOUSE_LEFT_BUTTON) || IsGamepadButtonPressed(0, GAMEPAD_BUTTON_RIGHT_FACE_DOWN))
    #define GUI_BUTTON_RELEASED     (IsMouseButtonReleased(MOUSE_LEFT_BUTTON) || IsGamepadButtonReleased(0, GAMEPAD_BUTTON_RIGHT_FACE_DOWN))
        #define GUI_SCROLL_DELTA    ((float)IsGamepadButtonDown(0, GAMEPAD_BUTTON_RIGHT_TRIGGER_2) - (float)IsGamepadButtonDown(0, GAMEPAD_BUTTON_LEFT_TRIGGER_2))
        #define GUI_SCROLL_DELTA    (GetMouseWheelMove() + (GetGamepadAxisMovement(0, GAMEPAD_AXIS_RIGHT_TRIGGER) + 1) - (GetGamepadAxisMovement(0, GAMEPAD_AXIS_LEFT_TRIGGER) + 1))
    #define GUI_POINTER_POSITION    GetMousePosition()
    #define GUI_KEY_DOWN(key)       IsKeyDown(key)
    #define GUI_KEY_PRESSED(key)    IsKeyPressed(key)
    #define GUI_INPUT_KEY           GetCharPressed()
            typedef enum { false, true } bool;
    typedef struct Vector2 {
        float x;
        float y;
    } Vector2;
    typedef struct Rectangle {
        float x;
        float y;
        float width;
        float height;
    } Rectangle;
    typedef Texture Texture2D;
    typedef struct GlyphInfo {
        int value;              
        int offsetX;            
        int offsetY;            
        int advanceX;           
        Image image;            
    } GlyphInfo;
    typedef struct Font {
        int baseSize;           
        int glyphCount;         
        int glyphPadding;       
        Texture2D texture;      
        Rectangle *recs;        
        GlyphInfo *glyphs;      
    } Font;
typedef struct GuiStyleProp {
    unsigned short controlId;   
    unsigned short propertyId;  
    int propertyValue;          
} GuiStyleProp;
typedef enum {
    STATE_NORMAL = 0,
    STATE_FOCUSED,
    STATE_PRESSED,
    STATE_DISABLED
} GuiState;
typedef enum {
    TEXT_ALIGN_LEFT = 0,
    TEXT_ALIGN_CENTER,
    TEXT_ALIGN_RIGHT
} GuiTextAlignment;
typedef enum {
    TEXT_ALIGN_TOP = 0,
    TEXT_ALIGN_MIDDLE,
    TEXT_ALIGN_BOTTOM
} GuiTextAlignmentVertical;
typedef enum {
    TEXT_WRAP_NONE = 0,
    TEXT_WRAP_CHAR,
    TEXT_WRAP_WORD
} GuiTextWrapMode;
typedef enum {
    DEFAULT = 0,
    LABEL,          
    BUTTON,
    TOGGLE,         
    SLIDER,         
    PROGRESSBAR,
    CHECKBOX,
    COMBOBOX,
    DROPDOWNBOX,
    TEXTBOX,        
    VALUEBOX,
    CONTROL11,
    LISTVIEW,
    COLORPICKER,
    SCROLLBAR,
    STATUSBAR
} GuiControl;
typedef enum {
    BORDER_COLOR_NORMAL = 0,    
    BASE_COLOR_NORMAL,          
    TEXT_COLOR_NORMAL,          
    BORDER_COLOR_FOCUSED,       
    BASE_COLOR_FOCUSED,         
    TEXT_COLOR_FOCUSED,         
    BORDER_COLOR_PRESSED,       
    BASE_COLOR_PRESSED,         
    TEXT_COLOR_PRESSED,         
    BORDER_COLOR_DISABLED,      
    BASE_COLOR_DISABLED,        
    TEXT_COLOR_DISABLED,        
    BORDER_WIDTH = 12,          
    TEXT_PADDING = 13,          
    TEXT_ALIGNMENT = 14,        
} GuiControlProperty;
typedef enum {
    TEXT_SIZE = 16,             
    TEXT_SPACING,               
    LINE_COLOR,                 
    BACKGROUND_COLOR,           
    TEXT_LINE_SPACING,          
    TEXT_ALIGNMENT_VERTICAL,    
    TEXT_WRAP_MODE              
} GuiDefaultProperty;
typedef enum {
    GROUP_PADDING = 16,         
} GuiToggleProperty;
typedef enum {
    SLIDER_WIDTH = 16,          
    SLIDER_PADDING              
} GuiSliderProperty;
typedef enum {
    PROGRESS_PADDING = 16,      
    PROGRESS_SIDE,              
} GuiProgressBarProperty;
typedef enum {
    ARROWS_SIZE = 16,           
    ARROWS_VISIBLE,             
    SCROLL_SLIDER_PADDING,      
    SCROLL_SLIDER_SIZE,         
    SCROLL_PADDING,             
    SCROLL_SPEED,               
} GuiScrollBarProperty;
typedef enum {
    CHECK_PADDING = 16          
} GuiCheckBoxProperty;
typedef enum {
    COMBO_BUTTON_WIDTH = 16,    
    COMBO_BUTTON_SPACING        
} GuiComboBoxProperty;
typedef enum {
    ARROW_PADDING = 16,         
    DROPDOWN_ITEMS_SPACING,     
    DROPDOWN_ARROW_HIDDEN,      
    DROPDOWN_ROLL_UP            
} GuiDropdownBoxProperty;
typedef enum {
    TEXT_READONLY = 16,         
} GuiTextBoxProperty;
typedef enum {
    SPINNER_BUTTON_WIDTH = 16,  
    SPINNER_BUTTON_SPACING,     
} GuiValueBoxProperty;
typedef enum {
    LIST_ITEMS_HEIGHT = 16,     
    LIST_ITEMS_SPACING,         
    SCROLLBAR_WIDTH,            
    SCROLLBAR_SIDE,             
    LIST_ITEMS_BORDER_NORMAL,   
    LIST_ITEMS_BORDER_WIDTH     
} GuiListViewProperty;
typedef enum {
    COLOR_SELECTOR_SIZE = 16,
    HUEBAR_WIDTH,               
    HUEBAR_PADDING,             
    HUEBAR_SELECTOR_HEIGHT,     
    HUEBAR_SELECTOR_OVERFLOW    
} GuiColorPickerProperty;
#define SCROLLBAR_LEFT_SIDE     0
#define SCROLLBAR_RIGHT_SIDE    1
RAYGUIAPI void GuiEnable(void);                                 
RAYGUIAPI void GuiDisable(void);                                
RAYGUIAPI void GuiLock(void);                                   
RAYGUIAPI void GuiUnlock(void);                                 
RAYGUIAPI bool GuiIsLocked(void);                               
RAYGUIAPI void GuiSetAlpha(float alpha);                        
RAYGUIAPI void GuiSetState(int state);                          
RAYGUIAPI int GuiGetState(void);                                
RAYGUIAPI void GuiSetFont(Font font);                           
RAYGUIAPI Font GuiGetFont(void);                                
RAYGUIAPI void GuiSetStyle(int control, int property, int value); 
#define RAYGUI_MAX_PROPS_BASE           16      
#define RAYGUI_MAX_PROPS_EXTENDED        8      
static GuiState guiState = STATE_NORMAL;        
static bool guiLocked = false;                  
static bool guiTooltip = false;                 
static bool guiControlExclusiveMode = false;    
static bool guiStyleLoaded = false;         
void GuiEnable(void) { if (guiState == STATE_DISABLED) guiState = STATE_NORMAL; }
void GuiDisable(void) { if (guiState == STATE_NORMAL) guiState = STATE_DISABLED; }
void GuiLock(void) { guiLocked = true; }
void GuiUnlock(void) { guiLocked = false; }
bool GuiIsLocked(void) { return guiLocked; }
void GuiSetAlpha(float alpha)
{
    if (alpha < 0.0f) alpha = 0.0f;
    else if (alpha > 1.0f) alpha = 1.0f;
    guiAlpha = alpha;
}
void GuiSetState(int state) { guiState = (GuiState)state; }
int GuiGetState(void) { return guiState; }
void GuiSetFont(Font font)
{
    if (font.texture.id > 0)
    {
        if (!guiStyleLoaded) GuiLoadStyleDefault();
        guiFont = font;
    }
}
Font GuiGetFont(void)
{
    return guiFont;
}
void GuiSetStyle(int control, int property, int value)
{
    if (!guiStyleLoaded) GuiLoadStyleDefault();
    guiStyle[control*(RAYGUI_MAX_PROPS_BASE + RAYGUI_MAX_PROPS_EXTENDED) + property] = value;
    if ((control == 0) && (property < RAYGUI_MAX_PROPS_BASE))
    {
        for (int i = 1; i < RAYGUI_MAX_CONTROLS; i++) guiStyle[i*(RAYGUI_MAX_PROPS_BASE + RAYGUI_MAX_PROPS_EXTENDED) + property] = value;
    }
}