vapi/raygui.vapi

using Raylib;

[CCode (cprefix = "", cheader_filename = "raygui.h")]
namespace Raygui {
    [CCode (cname = "RAYGUI_VERSION_MAJOR")]
    public const string GUI_VERSION_MAJOR;

    [CCode (cname = "RAYGUI_VERSION_MINOR")]
    public const string GUI_VERSION_MINOR;

    [CCode (cname = "RAYGUI_VERSION_PATCH")]
    public const string GUI_VERSION_PATCH;

    [CCode (cname = "RAYGUI_VERSION")]
    public const string GUI_VERSION;

    [CCode (cname = "GUI_BUTTON_DOWN")]
    public static bool gui_button_down ();

    [CCode (cname = "GUI_BUTTON_DOWN_ALT")]
    public static bool gui_button_down_alt ();

    [CCode (cname = "GUI_BUTTON_PRESSED")]
    public static bool gui_button_pressed ();

    [CCode (cname = "GUI_BUTTON_RELEASED")]
    public static bool gui_button_released ();

    [CCode (cname = "GUI_SCROLL_DELTA")]
    public static float gui_scroll_delta ();

    [CCode (cname = "GUI_POINTER_POSITION")]
    public static Vector2 gui_pointer_position ();

    [CCode (cname = "GUI_KEY_DOWN")]
    public static bool gui_key_down (KeyboardKey key);

    [CCode (cname = "GUI_KEY_PRESSED")]
    public static bool gui_key_pressed (KeyboardKey key);

    [CCode (cname = "GUI_INPUT_KEY")]
    public static char gui_input_key ();

    // Style property
    // NOTE: Used when exporting style as code for convenience
    [SimpleType]
    [CCode (cname = "GuiStyleProp", has_type_id = false)]
    public struct StyleProp {
        [CCode (cname = "controlId")]
        public ushort control_id;

        [CCode (cname = "propertyId")]
        public ushort property_id;

        [CCode (cname = "propertyValue")]
        public int property_value;
    } // StyleProp

    // RayGui control state
    [CCode (cname = "GuiState", cprefix = "STATE_", has_type_id = false)]
    public enum State {
        NORMAL,
        FOCUSED,
        PRESSED,
        DISABLED;
    } // State

    // RayGui control text alignment
    [CCode (cname = "GuiTextAlignment", cprefix = "TEXT_ALIGN_", has_type_id = false)]
    public enum TextAlignment {
        LEFT,
        CENTER,
        RIGHT
    } // TextAlignment

    // RayGui control text alignment vertical
    // NOTE: Text vertical position inside the text bounds
    [CCode (cname = "GuiTextAlignmentVertical", cprefix = "TEXT_ALIGN_", has_type_id = false)]
    public enum TextAlignmentVertical {
        TOP,
        MIDDLE,
        BOTTOM
    } // TextAlignmentVertical

    // RayGui control text wrap mode
    // NOTE: Useful for multiline text
    [CCode (cname = "GuiTextWrapMode", cprefix = "TEXT_WRAP_", has_type_id = false)]
    public enum TextWrapMode {
        NONE,
        CHAR,
        WORD
    } // TextWrapMode

    // RayGui controls
    [CCode (cname = "GuiControl", cprefix = "", has_type_id = false)]
    public enum Control {
        // Default -> populates to all controls when set
        DEFAULT,

        // Basic controls
        LABEL, // Used also for: LABELBUTTON
        BUTTON,
        TOGGLE, // Used also for: TOGGLEGROUP
        SLIDER, // Used also for: SLIDERBAR, TOGGLESLIDER
        [CCode (cname = "PROGRESSBAR")]
        PROGRESS_BAR,
        [CCode (cname = "CHECKBOX")]
        CHECK_BOX,
        [CCode (cname = "COMBOBOX")]
        COMBO_BOX,
        [CCode (cname = "DROPDOWNBOX")]
        DROPDOWN_BOX,
        [CCode (cname = "TEXTBOX")]
        TEXT_BOX, // Used also for: TEXTBOXMULTI
        [CCode (cname = "VALUEBOX")]
        VALUE_BOX,
        CONTROL11,
        [CCode (cname = "LISTVIEW")]
        LIST_VIEW,
        [CCode (cname = "COLORPICKER")]
        COLOR_PICKER,
        [CCode (cname = "SCROLLBAR")]
        SCROLL_BAR,
        [CCode (cname = "STATUSBAR")]
        STATUS_BAR
    } // Control

    // RayGui base properties for every control
    // NOTE: RAYGUI_MAX_PROPS_BASE properties (by default 16 properties)
    [CCode (cname = "GuiControlProperty", cprefix = "", has_type_id = false)]
    public enum ControlProperty {
        BORDER_COLOR_NORMAL,        // Control border color in STATE_NORMAL
        BASE_COLOR_NORMAL,          // Control base color in STATE_NORMAL
        TEXT_COLOR_NORMAL,          // Control text color in STATE_NORMAL
        BORDER_COLOR_FOCUSED,       // Control border color in STATE_FOCUSED
        BASE_COLOR_FOCUSED,         // Control base color in STATE_FOCUSED
        TEXT_COLOR_FOCUSED,         // Control text color in STATE_FOCUSED
        BORDER_COLOR_PRESSED,       // Control border color in STATE_PRESSED
        BASE_COLOR_PRESSED,         // Control base color in STATE_PRESSED
        TEXT_COLOR_PRESSED,         // Control text color in STATE_PRESSED
        BORDER_COLOR_DISABLED,      // Control border color in STATE_DISABLED
        BASE_COLOR_DISABLED,        // Control base color in STATE_DISABLED
        TEXT_COLOR_DISABLED,        // Control text color in STATE_DISABLED
        BORDER_WIDTH,               // Control border size, 0 for no border
        TEXT_PADDING,               // Control text padding, not considering border
        TEXT_ALIGNMENT,             // Control text horizontal alignment inside control text bound (after border and padding)
    } // ControlProperty

    // RayGui extended properties depend on control
    // NOTE: RAYGUI_MAX_PROPS_EXTENDED properties (by default, max 8 properties)
    //----------------------------------------------------------------------------------
    // DEFAULT extended properties
    // NOTE: Those properties are common to all controls or global
    // WARNING: Only 8 slots vailable for those properties by default
    [CCode (cname = "GuiDefaultProperty", cprefix = "", has_type_id = false)]
    public enum DefaultProperty {
        TEXT_SIZE,             // Text size (glyphs max height)
        TEXT_SPACING,               // Text spacing between glyphs
        LINE_COLOR,                 // Line control color
        BACKGROUND_COLOR,           // Background color
        TEXT_LINE_SPACING,          // Text spacing between lines
        TEXT_ALIGNMENT_VERTICAL,    // Text vertical alignment inside text bounds (after border and padding)
        TEXT_WRAP_MODE              // Text wrap-mode inside text bounds
    } // DefaultProperty

    // Toggle/ToggleGroup
    [CCode (cname = "GuiToggleProperty", cprefix = "", has_type_id = false)]
    public enum ToggleProperty {
        GROUP_PADDING,              // ToggleGroup separation between toggles
    } // ToggleProperty

    // Slider/SliderBar
    [CCode (cname = "GuiSliderProperty", cprefix = "", has_type_id = false)]
    public enum SliderProperty {
        SLIDER_WIDTH,               // Slider size of internal bar
        SLIDER_PADDING              // Slider/SliderBar internal bar padding
    } // SliderProperty

    // ProgressBar
    [CCode (cname = "GuiProgressBarProperty", cprefix = "", has_type_id = false)]
    public enum ProgressBarProperty {
        PROGRESS_PADDING,           // ProgressBar internal padding
        PROGRESS_SIDE,              // ProgressBar increment side: 0-left->right, 1-right-left
    } // ProgressBarProperty

    // ScrollBar
    [CCode (cname = "GuiScrollBarProperty", cprefix = "", has_type_id = false)]
    public enum ScrollBarProperty {
        ARROWS_SIZE,                // ScrollBar arrows size
        ARROWS_VISIBLE,             // ScrollBar arrows visible
        SCROLL_SLIDER_PADDING,      // ScrollBar slider internal padding
        SCROLL_SLIDER_SIZE,         // ScrollBar slider size
        SCROLL_PADDING,             // ScrollBar scroll padding from arrows
        SCROLL_SPEED,               // ScrollBar scrolling speed
    } // ScrollBarProperty

    // CheckBox
    [CCode (cname = "GuiCheckBoxProperty", cprefix = "", has_type_id = false)]
    public enum GuiCheckBoxProperty {
        CHECK_PADDING               // CheckBox internal check padding
    } // GuiCheckBoxProperty

    // ComboBox
    [CCode (cname = "GuiComboBoxProperty", has_type_id = false)]
    public enum ComboBoxProperty {
        COMBO_BUTTON_WIDTH ,        // ComboBox right button width
        COMBO_BUTTON_SPACING        // ComboBox button separation
    } //ComboBoxProperty

    // DropdownBox
    [CCode (cname = "GuiDropdownBoxProperty", cprefix = "", has_type_id = false)]
    public enum DropdownBoxProperty {
        ARROW_PADDING,              // DropdownBox arrow separation from border and items
        DROPDOWN_ITEMS_SPACING,     // DropdownBox items separation
        DROPDOWN_ARROW_HIDDEN,      // DropdownBox arrow hidden
        DROPDOWN_ROLL_UP            // DropdownBox roll up flag (default rolls down)
    } // DropdownBoxProperty

    // TextBox/TextBoxMulti/ValueBox/Spinner
    [CCode (cname = "GuiTextBoxProperty", cprefix = "", has_type_id = false)]
    public enum TextBoxProperty {
        TEXT_READONLY,              // TextBox in read-only mode: 0-text editable, 1-text no-editable
    } // TextBoxProperty

    // ValueBox/Spinner
    [CCode (cname = "GuiValueBoxProperty", cprefix = "", has_type_id = false)]
    public enum ValueBoxProperty {
        SPINNER_BUTTON_WIDTH,       // Spinner left/right buttons width
        SPINNER_BUTTON_SPACING,     // Spinner buttons separation
    } // ValueBoxProperty

    // ListView
    [CCode (cname = "GuiListViewProperty", cprefix = "", has_type_id = false)]
    public enum ListViewProperty {
        LIST_ITEMS_HEIGHT,          // ListView items height
        LIST_ITEMS_SPACING,         // ListView items separation
        SCROLLBAR_WIDTH,            // ListView scrollbar size (usually width)
        SCROLLBAR_SIDE,             // ListView scrollbar side (0-SCROLLBAR_LEFT_SIDE, 1-SCROLLBAR_RIGHT_SIDE)
        LIST_ITEMS_BORDER_NORMAL,   // ListView items border enabled in normal state
        LIST_ITEMS_BORDER_WIDTH     // ListView items border width
    } // ListViewProperty

    // ColorPicker
    [CCode (cname = "GuiControlProperty", cprefix = "", has_type_id = false)]
    public enum ColorPickerProperty {
        COLOR_SELECTOR_SIZE,
        HUEBAR_WIDTH,               // ColorPicker right hue bar width
        HUEBAR_PADDING,             // ColorPicker right hue bar separation from panel
        HUEBAR_SELECTOR_HEIGHT,     // ColorPicker right hue bar selector height
        HUEBAR_SELECTOR_OVERFLOW    // ColorPicker right hue bar selector overflow
    } // ColorPickerProperty

    [CCode (cname = "SCROLLBAR_LEFT_SIDE")]
    public const int SCROLLBAR_LEFT_SIDE;

    [CCode (cname = "SCROLLBAR_RIGHT_SIDE")]
    public const int SCROLLBAR_RIGHT_SIDE;

    // Global gui state control functions
    [CCode (cname = "GuiEnable")]
    public static void gui_enable (); // Enable gui controls (global state)

    [CCode (cname = "GuiDisable")]
    public static void gui_disable (); // Disable gui controls (global state)

    [CCode (cname = "GuiLock")]
    public static void gui_lock (); // Lock gui controls (global state)

    [CCode (cname = "GuiUnlock")]
    public static void gui_unlock (); // Unlock gui controls (global state)

    [CCode (cname = "GuiIsLocked")]
    public static bool gui_is_locked (); // Check if gui is locked (global state)

    [CCode (cname = "GuiSetAlpha")]
    public static void gui_set_alpha (float alpha); // Set gui controls alpha (global state), alpha goes from 0.0f to 1.0f

    [CCode (cname = "GuiSetState")]
    public static void gui_set_state (State state); // Set gui state (global state)

    [CCode (cname = "GuiGetState")]
    public static State gui_get_state (); // Get gui state (global state)

    // Font set/get functions
    [CCode (cname = "GuiSetFont")]
    public static void gui_set_font (Font font); // Set gui custom font (global state)

    [CCode (cname = "GuiGetFont")]
    public static Font gui_get_font (); // Get gui custom font (global state)

    // Style set/get functions
    [CCode (cname = "GuiSetStyle")]
    public static void gui_set_style (Control control, ControlProperty property, int val); // Set one style property
